<package format="3">
    <name>imgui_ros</name>
    <version>0.0.1</version>
    <description>imgui integration for ROS</description>
    <license>MIT</license>
    <maintainer email="max.schwarz@ais.uni-bonn.de">Max Schwarz</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>topic_tools</depend>
    <depend>pluginlib</depend>

    <depend>libglfw3-dev</depend>
</package>
